[gd_scene load_steps=5 format=3 uid="uid://cetg5ahiotkh4"]

[ext_resource type="Script" path="res://HUD.gd" id="1_dxory"]
[ext_resource type="FontFile" uid="uid://68e6jms6vc3p" path="res://dodge_the_creeps_2d_assets/fonts/Xolonium-Regular.ttf" id="2_yef27"]

[sub_resource type="InputEventAction" id="InputEventAction_v2k2b"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_10x1a"]
events = [SubResource("InputEventAction_v2k2b")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_dxory")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 81.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_yef27")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -121.5
offset_right = 240.0
offset_bottom = 121.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_yef27")
theme_override_font_sizes/font_size = 64
text = "Dodge The Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_yef27")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_10x1a")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HighScore" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -121.0
offset_right = -34.0
offset_bottom = 26.0
grow_horizontal = 0
text = "High Score:"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
